# graphics-playground

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: opencv.cmake  targets.cmake
processing/ascii/: ascii.pde
processing/boot/: boot.pde
processing/numbers/: numbers.pde
src/: CMakeLists.txt
src/dither/: CMakeLists.txt  dither.cpp  dither.h  dither.py  main.cpp
